<?xml version="1.0"?>
<package format="3">
  <name>teleop_control_py</name>
  <version>0.1.0</version>
  <description>MediaPipe hand teleoperation for UR5 and SoftHand.</description>
  <maintainer email="rvl@example.com">rvl</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>joy</exec_depend>
  <exec_depend>qbsofthand_control</exec_depend>
  <exec_depend>robotiq_2f_gripper_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>python3-h5py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
